@@ -1,3 +1,8 @@
+2012-09-24  Janis Johnson  <janisjo@codesourcery.com>
+
+	doc/sourcebuild.texi (Selectors): Document the use of target
+	and xfail used together.
+
 2012-09-24  Richard Guenther  <rguenther@suse.de>
 
 	PR middle-end/54632
